--- a/.github/workflows/Build Electron App.yml
+++ b/.github/workflows/Build Electron App.yml
@@ -24,7 +24,8 @@ jobs:
        run: date +%s > report.txt
        
      - name: Build Electron App With Nativefier
-       run: nativefier https://loader.to/ -n LoaderTo --ignore-gpu-blacklist -u chrome --file-download-options
+       run: nativefier https://loader.to/ -n LoaderTo --ignore-gpu-blacklist -u chrome --file-download-options --upgrade -i favicon.ico
+       shell: cmd
        
      - name: Commit report
        run: |
