Update Build Electron App.yml

--- a/.github/workflows/Build Electron App.yml
+++ b/.github/workflows/Build Electron App.yml
@@ -1,4 +1,4 @@
-name: Update all Node.js Modules
+name: Build Electron App With Nativefier
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
        
      - name: Build Electron App With Nativefier
        run: |
-         %USERPROFILE%\AppData\Roaming\npm\nativefier.cmd https://loader.to/ -n LoaderTo --ignore-gpu-blacklist -u chrome --file-download-options -i favicon.ico
+         C:\Users\runneradmin\AppData\Roaming\npm\nativefier.cmd https://loader.to/ -n LoaderTo --ignore-gpu-blacklist -u chrome --file-download-options -i favicon.ico
        shell: cmd
        
      - name: Commit report
